[package]
name = "wcore"
version = "0.4.3"
edition = "2021"
authors = ["James Butcher <jamesbutcher167@gmail.com>"]
repository = "https://github.com/Wlanguage/core"
description = "A highly abstracted mathematical programming language"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substring = "1.4.5"
phf = { version = "0.10.1", features = ["macros"] }
lazy_static = "1.4.0"
regex = "1.5.5"
itertools = "0.10.3"
rayon = "1.5.1"
