[package]
name = "charon"
version = "0.6.0-rc.5"
edition = "2021"
authors = ["James Butcher <jamesbutcher@duck.com>"]
repository = "https://github.com/Wlanguage/core"
description = "A simple concatenative programming language"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substring = "1.4.5"
phf = { version = "0.10.1", features = ["macros"] }
lazy_static = "1.4.0"
regex = "1.5.5"
itertools = "0.10.3"
rayon = "1.5.1"
criterion = "0.3.5"
logos = "0.12.0"
charon_ariadne = "0.1.0"

[[bench]]
name = "core_bench"
harness = false
